crates/naos-core/tests/fixtures/conformance/rejected/string-event-handler.wc.tsx
export function StringEventHandler() {
  return <button onClick="doSomething()">Send</button>
}
